--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DhatriK Kumar - UI/UX Designer & Web Developer</title>
-    <meta name="description" content="Portfolio of DhatriK Kumar - UI/UX Designer, Web Developer & Entrepreneur from IIT Kharagpur. Passionate about AI-driven applications and modern web solutions." />
-    <meta name="author" content="DhatriK Kumar" />
-    <meta name="keywords" content="DhatriK Kumar, UI/UX Designer, Web Developer, IIT Kharagpur, React Developer, Portfolio, Entrepreneur" />
+    <title>Dhatrik Kumar - UI/UX Designer & Web Developer</title>
+    <meta name="description" content="Portfolio of Dhatrik Kumar - UI/UX Designer, Web Developer & Entrepreneur from IIT Kharagpur. Passionate about AI-driven applications and modern web solutions." />
+    <meta name="author" content="Dhatrik Kumar" />
+    <meta name="keywords" content="Dhatrik Kumar, UI/UX Designer, Web Developer, IIT Kharagpur, React Developer, Portfolio, Entrepreneur" />
 
-    <meta property="og:title" content="DhatriK Kumar - UI/UX Designer & Web Developer" />
-    <meta property="og:description" content="Portfolio of DhatriK Kumar - UI/UX Designer, Web Developer & Entrepreneur from IIT Kharagpur" />
+    <meta property="og:title" content="Dhatrik Kumar - UI/UX Designer & Web Developer" />
+    <meta property="og:description" content="Portfolio of Dhatrik Kumar - UI/UX Designer, Web Developer & Entrepreneur from IIT Kharagpur" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   </head>
 
   <body>
